--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-select": "^2.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hast-util-to-jsx-runtime": "^2.3.6",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "react": "^19.0.0",
