--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-simple-code-editor": "^0.14.1",
     "tailwind-merge": "^3.2.0",
     "zustand": "^5.0.3"
   },
