--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hast-util-to-jsx-runtime": "^2.3.6",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "react": "^19.0.0",
